--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             console.log(id.value);
             console.log(otp.value)
             if (id.value == 2600410 && otp.value == 123456) {
-                window.open('data.html', '_self'); // '_blank' opens the link in a new tab
+                window.location.href = "data.html" // '_blank' opens the link in a new tab
             }
             else {
                 alert("Enter Valid Details.");
