--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="logo.png" alt="Website Logo">
     <nav>
         <ul class="navbar">
-            <li><a href="./home.html">Home</a></li>
+            <li><a href="login.html">Home</a></li>
             <li><a href="#">Transfer Requests</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#" onclick="logout()">Logout</a></li>
