--- a/data.html
+++ b/data.html
@@ -11,7 +11,7 @@
 
         <nav>
             <ul class="navbar">
-                <li><a style="text-decoration: none;" href="login.html">Home</a></li>
+                <li><a style="text-decoration: none;" href="index.html">Home</a></li>
                 <li><a style="text-decoration: none;" href="#">Transfer Requests</a></li>
                 <li><a style="text-decoration: none;" href="#">Profile</a></li>
                 <li><a style="text-decoration: none;" href="#" onclick="logout()">Logout</a></li>
